[package]
name = "dandy-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.25.0"
eframe = "0.25.0"
dandy-draw = { path = "../dandy-draw", version = "*" }
dandy = { path = "../dandy", version = "*" }
