[package]
name = "dandy-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dandy = { path = "../dandy" }
dandy-draw = { path = "../dandy-draw", default-features = false, features = ["canvas"] }
wasm-bindgen = "0.2.90"
js-sys = "0.3.67"

[dependencies.web-sys]
version = "0.3.67"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]
