[package]
name = "dandy"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "Implementation of DFAs, NFAs and regular expressions together with a file format"
readme = "README.md"
repository = "https://github.com/cmdjojo/dandy/"

[dependencies]
nom = "7.1.3"
thiserror = "1.0.56"
unicode-segmentation = "1.10.1"
nalgebra = "0.32.3"
num-traits = "0.2.18"

[dev-dependencies]
proptest = "1.4.0"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
lazy_static = "1.4.0"
regex = "1.10.3"

[[bench]]
name = "benchmark"
harness = false
